<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:text="Calendario de tu vida"
        android:textColor="@color/primary"
        android:textSize="28sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:background="@drawable/edittext_border"
        android:padding="12dp"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/etContrasena"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/contrasena"
        android:inputType="textPassword"
        android:background="@drawable/edittext_border"
        android:padding="12dp"
        android:layout_marginBottom="24dp"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/iniciar_sesion"
        android:backgroundTint="@color/primary"
        android:textColor="@color/white"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/tvIrRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_tienes_cuenta"
        android:textColor="@color/primary"
        android:padding="8dp"/>

</LinearLayout>
